# ont-ecosystem

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORITATIVE_SOURCES.md  CHANGELOG.md  CLAUDE.md  CLEANUP_MANIFEST.md  CONTRIBUTING.md  DEPLOY-INSTRUCTIONS.md  DEPLOY-TO-GITHUB.md  GITHUB-SETUP.md  INTEGRATION_DESIGN.md  LICENSE  Makefile  ONT-ECOSYSTEM-README-v2_1.md  README.md  SKILL.md  __init__.py  ci.yml  experiment_registry_browser.html  greatlakes_discovery_job.sbatch  greatlakes_proposal.html  install.ps1  install.sh  ont_dashboard.jsx  ont_readlen.py  ont_readlen_SKILL.md  ont_readlen_dashboard.jsx  ont_readlen_endreason.py  ont_readlen_endreason_SKILL.md  ont_readlen_v2.py  ont_registry.py  proposal_data1.html  push-to-github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_core.py  test_readlen_endreason.py
.claude/: settings.json  skills.md
.claude/commands/: comprehensive-analysis.md  dorado-bench-v2.md  end-reason.md  experiment-db.md  manuscript.md  ont-align.md  ont-experiments-v2.md  ont-monitor.md  ont-pipeline.md  skill-maker.md
.claude/hooks/: project-enter.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: changelog.yml  ci.yml  codeql.yml  docs.yml  manual.yml  ont-adaptive-sampling.yml  ont-alignment.yml  ont-analysis.yml  ont-assembly.yml  ont-basecalling.yml  ont-benchmark.yml  ont-data.yml  ont-file-formats.yml  ont-hpc.yml  ont-manuscript.yml  ont-metagenomics.yml  ont-methylation.yml  ont-pharmacogenomics.yml  ont-phasing.yml  ont-pipeline.yml  ont-qc.yml  ont-rna.yml  ont-textbook.yml  ont-troubleshooting.yml  ont-validation.yml  ont-variants.yml  pr-checks.yml  release.yml  stale.yml
completions/: ont-completion.bash
dashboards/: ont-align-dashboard.jsx  ont-experiments-dashboard.jsx  ont-workflow-dashboard.jsx
data/: experiment_registry.csv  experiment_registry.json  registry_dashboard.html  registry_statistics.json
data/manuscript_figures/: .gitignore  CHANGELOG.md  INDEX.md  README.md  SUBMISSION_TRACKER.md  abstract_registry.tex  abstract_registry.txt  acknowledgments.tex  author_contributions.tex  competing_interests.tex  cover_letter.tex  data_availability.tex  discussion_registry.tex  discussion_registry.txt  fig_category_by_device_caption.tex  fig_device_model_heatmap_caption.tex  fig_qc_distributions_caption.tex  fig_registry_overview_caption.tex  fig_registry_overview_caption.txt  fig_temporal_analysis_caption.tex  highlights.txt  introduction_registry.tex  introduction_registry.txt  main_manuscript.aux  main_manuscript.bbl  main_manuscript.blg  main_manuscript.out  main_manuscript.tex  methods_registry.tex  methods_registry.txt  references_registry.bib  results_registry.tex  results_registry.txt  reviewer_response_template.tex  supplementary_materials.tex  tbl_registry_stats.tex  tbl_registry_summary.tex  tbl_supp_experiments.tex
data/math/: All_Math.tex  MATH_SKILLS_INTEGRATION.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLETE_SYSTEM_GUIDE.md  DEVELOPMENT.md  ENVIRONMENT.md  GITHUB-SETUP.md  GITHUB.md  GITHUB_USAGE.md  INSTALLATION.md  QUICKSTART.md  REDESIGN_PLAN.md  SKILLS.md  SKILL_DEVELOPMENT.md  SKILL_TEMPLATE.md  SYSTEM_ARCHITECTURE.md  TUTORIALS.md
docs/plans/: 2025-12-30-end-reason-manuscript-design.md
examples/configs/: armis2.yaml  greatlakes.yaml  local.yaml
examples/pipelines/: pharmaco-clinical.yaml  qc-fast.yaml  research-full.yaml
installable-skills/: README.md  create-zips.sh  install-all.sh
installable-skills/comprehensive-analysis/: comprehensive-analysis.md  install.sh  manifest.json
installable-skills/dorado-bench-v2/: dorado-bench-v2.md
installable-skills/end-reason/: end-reason.md  manifest.json
installable-skills/endreason-manuscript/: endreason-manuscript.md
installable-skills/experiment-db/: experiment-db.md
installable-skills/manuscript/: manuscript.md
lib/: __init__.py  cache.py  cli.py  config.py  discovery_report.py  errors.py  io.py  logging_config.py  ont_core.py  parallel.py  qscore.py  quick_analysis.py  timing.py  validation.py
ont-ecosystem/: .gitignore  LICENSE  README.md  install.sh  setup-github.sh
registry/: INDEX.yaml  experiments.yaml  experiments_snapshot.json
registry/schemas/: task.json  (+5 more)
scripts/: collect_end_reason_results.py  diagnose_hpc_jobs.sh  generate_manuscript_figures.py  hpc_end_reason_analysis.py  hpc_pod5_audit.py  slurm_end_reason_array.sbatch  submit_hpc_analysis.sh
skills/: MANIFEST.yaml  dorado-bench-v2.skill  end-reason.skill  end-reason_SKILL.md  experiment-db.skill  ont-align.skill  ont-custom-barcodes.skill  ont-experiments-v2.skill  ont-monitor.skill  ont-pipeline.skill
sma_configs/: INDEX.yaml  classify_reads.py  create_reference_figure.py  generate_all_references.py  generate_references.py  library_prep_notes.md  update_all_configs.py  visualize_all_experiments.py  visualize_peaks.py
sma_db/: analyze_reads_qscore.py  analyze_seqsum_qscore.py  extractMeta.py  ingest.py  inputInit.py  mkdb.py  sma_seq_reference_builder.py  targets_template.yaml
tests/: __init__.py  test_core.py  test_endreason_qc.py  test_generators.py  test_integration.py  test_lib.py  test_utilities.py
textbook/: CLAUDE.md  compile_config.yaml  database_schema.yaml  equation_framework_v2.tex  equations.yaml  haplotype_v6_complete_FIXED.tex  references.bib  sms.sty  variables.yaml
(+400 files in other folders)
