[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ont-ecosystem"
version = "2.1.0"
description = "Oxford Nanopore experiment management with provenance tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Single Molecule Sequencing Lab", email = "gregfar@umich.edu"}
]
maintainers = [
    {name = "Single Molecule Sequencing Lab", email = "gregfar@umich.edu"}
]
keywords = [
    "nanopore",
    "oxford-nanopore",
    "sequencing",
    "bioinformatics",
    "provenance",
    "experiment-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analysis = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.5",
]
bam = [
    "pysam>=0.19.0",
]
pod5 = [
    "pod5>=0.3.0",
    "h5py>=3.0.0",
]
web = [
    "flask>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]
all = [
    "ont-ecosystem[analysis,bam,pod5,web,dev]",
]

[project.urls]
Homepage = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem"
Documentation = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem#readme"
Repository = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem.git"
Issues = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem/issues"

[project.scripts]
ont = "ont_core:main"
ont_experiments = "bin.ont_experiments:main"
ont_monitor = "bin.ont_monitor:main"
ont_align = "bin.ont_align:main"
ont_dashboard = "bin.ont_dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "bin*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["lib", "bin"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
