[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ont-ecosystem"
version = "3.0.0"
description = "Oxford Nanopore experiment management with provenance tracking and manuscript generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Single Molecule Sequencing Lab", email = "sms-lab@umich.edu"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["nanopore", "sequencing", "bioinformatics", "provenance", "ont"]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
full = [
    "pysam>=0.21.0",
    "edlib>=1.3.9",
    "numpy>=1.20",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "pod5>=0.3.0",
    "h5py>=3.0",
    "flask>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem"
Documentation = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem/tree/main/docs"
Repository = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem.git"
Issues = "https://github.com/Single-Molecule-Sequencing/ont-ecosystem/issues"

[project.scripts]
ont-experiments = "bin.ont_experiments:main"
ont-align = "bin.ont_align:main"
ont-pipeline = "bin.ont_pipeline:main"
ont-monitor = "bin.ont_monitor:main"
ont-manuscript = "bin.ont_manuscript:main"
ont-context = "bin.ont_context:main"
ont-stats = "bin.ont_stats:main"
ont-check = "bin.ont_check:main"
ont-help = "bin.ont_help:main"
ont-update = "bin.ont_update:main"
ont-backup = "bin.ont_backup:main"
ont-doctor = "bin.ont_doctor:main"
ont-report = "bin.ont_report:main"
end-reason = "bin.end_reason:main"
dorado-basecall = "bin.dorado_basecall:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bin"]
omit = ["*/test_*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
